# govnolloc

./: meson.build
lib/: govnolloc.c  govnolloc.h  meson.build
scripts/: time.sh
src/: main.c  main_malloc.c  meson.build
